--- a/templates/faq.html
+++ b/templates/faq.html
@@ -1,1 +1,112 @@
+<!DOCTYPE HTML>
+<!--
+	Arcana by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>XSSworm.dev | FAQ</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="{{ url_for('static',filename='assets/css/main.css') }}" />
+		<link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static',filename='favicon.ico') }}" />
+	</head>
+	<body class="is-preload">
+		<div id="page-wrapper">
 
+			<!-- Header -->
+				<div id="header">
+
+					<!-- Logo -->
+						<h1><a href="/" id="logo">XSS Worm<em> .dev</em></a></h1>
+
+					<!-- Nav -->
+						<nav id="nav">
+							<ul>
+								<li><a href="/">Home</a></li>
+								<li><a href="/score">Score</a></li>
+								<li><a href="/login">Login</a></li>
+								<li><a href="/send-message">Messages</a></li>
+								<li><a href="/rules">Rules</a></li>
+								<li class="current"><a href="/faq">FAQ</a></li>
+							</ul>
+						</nav>
+
+				</div>
+
+			<!-- Main -->
+				<section class="wrapper style1">
+					<div class="container">
+						<div id="content">
+
+							<!-- Content -->
+
+								<article>
+									<header>
+										<h2>FAQ</h2>
+										<p>Frequently Asked Questions</p>
+									</header>
+
+									<h3>Is there any dedicated support channel?</h3>
+									<p>Yep, you can join <a target="_blank" href="https://owasp.slack.com">owasp.slack.com</a> and ping @vavkamil in <strong>#chapter-czech</strong> ;)</p>
+
+									<h3>What exactly is the goal?</h3>
+									<p>To exploit the XSS/CSRF vulnerabilities and write a self-replicating worm. The goal is to design an efficient algorithm to spread the infection in a way that at the end of the competition, you will be the one who infected most of the victims. You are supposed to mark the infected victims with your team color to score the points, but they can be "re-infected" by another user, which will result in losing your points. And you are supposed to design and unleash the worm only with 13 attempts.</p>
+
+									<h3>How to claim my prize?</h3>
+									<p>Congratulations, if you are the lucky one ;) Just <a href="https://vavkamil.cz/contact/" target="_blank">contact me</a> via email/Twitter and I will transfer the BTC to you. Nice to have the address ready.</p>
+
+									<h3>Are there any hidden flags?</h3>
+									<p>Unfortunately no :( Although this was advertised as CTF, I didn't have enough time to do some easter eggs or stuff like that. So no need to brute-force files/directories or scanning for any exploits. The server is not properly hardened and you could cause disruptions and ruin the fun, so please play nice.</p>
+
+									<h3>Can I publish a write-up?</h3>
+									<p>Yeah, that would be awesome. I would like to see what you were thinking and how did you designed your worm and the self-spreading capability.</p>
+
+									<h3>What about cheating?</h3>
+									<p>I decided not to enforce Twitter/Google authentication, or implement captcha, so you are free to register as many accounts as you want. It would be nice if you won't reuse the color when sending the payload from a different account, as the main goal is to create a self-propagating worm, not to spam the infection manually to score some sweet points.</p>
+
+									<h3>Is this open-source?</h3>
+									<p>The full source code will be published on my Github after the event, along with the blog post explaining the logic and motivation, and of course a proof of concept of the worm.</p>
+
+
+
+
+								</article>
+
+						</div>
+					</div>
+				</section>
+
+			<!-- Footer -->
+				<div id="footer">
+
+					<!-- Icons -->
+						<ul class="icons">
+							<li><a target="_blank" href="https://github.com/vavkamil" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a target="_blank" href="https://twitter.com/vavkamil" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a target="_blank" href="https://vavkamil.cz" class="icon brands fa-blogger"><span class="label">Blog</span></a></li>
+							<li><a target="_blank" href="https://reddit.com/r/bugbounty" class="icon brands fa-reddit"><span class="label">Reddit</span></a></li>
+						</ul>
+
+					<!-- Copyright -->
+						<div class="copyright">
+							<ul class="menu">
+								<li>&#127279; 2020. No rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							</ul>
+						</div>
+
+				</div>
+
+		</div>
+
+		<!-- Scripts -->
+			<script src="{{ url_for('static',filename='assets/js/jquery.min.js') }}"></script>
+			<script src="{{ url_for('static',filename='assets/js/jquery.dropotron.min.js') }}"></script>
+			<script src="{{ url_for('static',filename='assets/js/browser.min.js') }}"></script>
+			<script src="{{ url_for('static',filename='assets/js/breakpoints.min.js') }}"></script>
+			<script src="{{ url_for('static',filename='assets/js/util.js') }}"></script>
+			<script src="{{ url_for('static',filename='assets/js/main.js') }}"></script>
+
+	</body>
+</html>
